--- a/index.html
+++ b/index.html
@@ -4,17 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 <body>
-    <div class="bg-dark row text-white">
-        <div class="col border border-warning-subtle">
-            <h1>ft_Transcendance</h1>
+    <div class="container  text-dark d-flex justify-content-center align-items-center">
+        <div id="login-page" class="text-center move-dowm ">
+            <div class="title fs-1 text-dark">
+                <h1>ft_Transcendance</h1>
+            </div>
+            <div class="game-display mt-5">
+                <img src="pong1.png" alt="">
+            </div>
+            <div class="connecting-btn mt-5">
+                <form action="">
+                    <div class="d-flex flex-column ">
+                        <div class="m-1">
+                            <input type="text" name="email" placeholder="COURRIEL" id="email" class=" btn btn-dark text-center  max-width-btn">
+                        </div>
+                        <div class="m-1">
+                                <input type="text" name="password" placeholder="XXXXXXX" id="password" class=" btn btn-dark text-center  max-width-btn">
+                                <div class="d-flex flex-column move-left">
+                                    <a href="">mot de passe oublie</a>
+                                </div>
+                        </div>
+                        <div class="">
+                            <input type="submit" value="SE CONNECT" class=" text-center btn btn-dark m-1 max-width-btn">
+                        </div>
+                    </div>
+                </form>
+                <div>
+                    <p>ou</p>
+                </div>
+                    <form action="">
+                        <div class="">
+                            <a href="" class=" btn btn-dark m-1 max-width-btn "> 42</a>
+                        </div>
+                        <div class="">
+                            <a href="" id="regis-form" class=" btn btn-dark m-1 max-width-btn">inscrivez-vous</a>
+                        </div>
+                    </form>
+            </div>
         </div>
-        <div class="col-md-auto border border-primary-subtle">
-            <h1> nav ft_Transcendance</h1>
-        </div>
-    </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
