add the lang btn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Home</title>
 </head>
 <body>
+    <div class="mode-lang d-flex container-fluid justify-content-end mt-2 " id="lang-mode">
+        <div class="d-flex the-lang me-2">
+            <div class="fr">
+                <a href="">fr</a>
+            </div>
+            <div class="eng">
+                <a href="">en</a>
+            </div>
+            <div class="es">
+                <a href="">es</a>
+            </div>
+        </div>
+        <div class="theme p-1">
+            <a href=""> dark</a>
+        </div>
+    </div>
     <div class="container  text-dark d-flex justify-content-center align-items-center">
         <div id="login-page" class="text-center move-dowm ">
             <div class="title fs-1 text-dark">
