--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
@@ -11,20 +13,20 @@
     <div class="mode-lang d-flex container-fluid justify-content-end mt-2 " id="lang-mode">
         <div class="d-flex the-lang me-2">
             <div class="fr">
-                <a href="">fr</a>
+                <a href="#">fr</a>
             </div>
             <div class="eng">
-                <a href="">en</a>
+                <a href="#">en</a>
             </div>
             <div class="es">
-                <a href="">es</a>
+                <a href="#">es</a>
             </div>
         </div>
         <div class="theme p-1">
-            <a href=""> dark</a>
+            <a href="#"> dark</a>
         </div>
     </div>
-    <div class="container  text-dark d-flex justify-content-center align-items-center">
+    <!-- <div class="container  text-dark d-flex justify-content-center align-items-center">
         <div id="login-page" class="text-center move-dowm ">
             <div class="title fs-1 text-dark">
                 <h1>ft_Transcendance</h1>
@@ -54,15 +56,71 @@
                 </div>
                     <form action="">
                         <div class="">
-                            <a href="" class=" btn btn-dark m-1 max-width-btn "> 42</a>
+                            <a href="#" class=" btn btn-dark m-1 max-width-btn "> 42</a>
                         </div>
                         <div class="">
-                            <a href="" id="regis-form" class=" btn btn-dark m-1 max-width-btn">inscrivez-vous</a>
+                            <a href="#" id="regis-form" class=" btn btn-dark m-1 max-width-btn" >inscrivez-vous</a>
                         </div>
                     </form>
             </div>
-        </div>
+        </div> -->
+
+
+        <!--  SignUp page -->
+          <div class="d-flex justify-content-center" id="SignUp">
+            <form action="" class="border move-dowm">
+                <h1 class="text-center fs-5">Sign Up</h1>
+                <div class="avatarLog m-3">
+
+                    <div class=" border border-dark w-75 mx-auto form-btn-first">
+                        <div class="rounded-circle m-2">
+                            <img src="robot.png" alt="robot img" class="w-25 border border-dark rounded-circle">
+                        </div>
+                        <div class="input-info">
+                            <div class="input-group m-1">
+                                <label for="">name</label>
+                                <input type="text" name="name" id="name" class="border rounded-pill ms-5 w-75">
+                            </div>                        
+                            <div class="input-group m-1">
+                                <label for="">username</label>
+                                <input type="text" name="name" id="username" class="border rounded-pill ms-3 w-75">
+                            </div>                        
+                            <div class="input-group m-1">
+                                <label for="">email</label>
+                            <input type="email" name="email" id="email" class="border rounded-pill ms-5 w-75">
+                        </div>                        
+                        <div class="input-group m-1">
+                            <label for="">password</label>
+                            <input type="password" name="email" id="email" class="border rounded-pill ms-3 w-75">
+                        </div>                        
+                    </div>
+                </div>
+
+            </div>
+                
+                <div class="upload-avatar m-3">
+                    <div class="p-3 w-75 mx-auto border border-dark">
+                        <h2 class="fs-6 m-1"> upload-avatar</h2>
+                        <div class="text-center p-1">
+                            <label for="files" class="input_img rounded-circle">
+                                <i class="bi bi-cloud-arrow-up fs-3"></i>
+                                <div class="text-center  ">
+                                    <p class="fs-6 border-bottom border-dark">chose file</p>
+                                </div>
+                            </label>
+                            <input type="file"  id="files"  style="display: none;">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="m-3">
+                    <div class="text-center w-75 mx-auto border border-dark p-3 form-btn-three">
+                        <input type="submit" value="Done" class="bg-primary border rounded-pill" >
+                    </div>
+                </div>
+            </form>
+          </div>
+
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
